# browser-timer-rs

./: .gitignore  Cargo.toml  README.md  input_data_rs.csv  input_data_rs.json  password_data_rs.csv
KEYSTROKE-SAMPLES-31-USERS/: split_1-7.json  split_15-21.json  split_22-28.json  split_29-31.json  split_8-14.json
KEYSTROKE-SAMPLES-31-USERS/IMPOSTORS/: 1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  (+124 more)
KEYSTROKES-SAMPLES-OUTLIER/: split_14.json  split_19.json  split_27.json
KEYSTROKES-SAMPLES-OUTLIER/user14/: user14-1  user14-10  user14-11  user14-12  user14-13  user14-14  user14-15  user14-2  user14-3  user14-4  user14-5  user14-6  user14-7  user14-8  user14-9
KEYSTROKES-SAMPLES-OUTLIER/user19/: user19-1  user19-10  (+13 more)
password_data_chrome_isolated/: text-timing-data (1).csv  text-timing-data (10).csv  text-timing-data (11).csv  text-timing-data (12).csv  text-timing-data (13).csv  text-timing-data (14).csv  text-timing-data (15).csv  text-timing-data (16).csv  text-timing-data (17).csv  text-timing-data (18).csv  text-timing-data (19).csv  text-timing-data (2).csv  text-timing-data (20).csv  text-timing-data (3).csv  text-timing-data (4).csv  text-timing-data (5).csv  text-timing-data (6).csv  text-timing-data (7).csv  text-timing-data (8).csv  text-timing-data (9).csv  text-timing-data.csv
src/: browser_timer.rs  delay.rs  free_text.rs  live.rs  main.rs  pw_timer.rs  raw_input.rs  raw_input_macos.rs  timer_samples.rs
(+482 files in other folders)
