[package]
name = "browser-timer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# enigo = "0.1.2"
enigo = { path = "./enigo" }
csv = "1.2.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
webbrowser = "0.8.9"
# inputbot = "0.5"
rdev = {version = "0.5.2", features = ["unstable_grab"]}
clap = {version = "4.3.3", features = ["derive"]}
rand = "0.8.5"
